(fix) Navigation Bar has wrong size of press effect on links

--- a/tau/src/css/profile/mobile/changeable/common/navigation.less
+++ b/tau/src/css/profile/mobile/changeable/common/navigation.less
@@ -19,7 +19,7 @@
 		list-style-type : none;
 
 		.ui-navigation-item:first-child {
-			margin-left: 32 * @unit_base;
+			margin-left: 18 * @unit_base;
 			&::before {
 				content: none;
 			}
@@ -41,14 +41,15 @@
 				color: @color_navigation_text;
 				background-color : @color_navigation_bar_icon;
 				-webkit-mask-image : url("images/core_navigation_bar_icon_arrow.png");
-				-webkit-mask-size : 100% 100%
+				-webkit-mask-size : 100% 100%;
+                margin: 0 -15 * @unit_base 0;
 			}
 
 			.ui-text {
 				float: left;
 				height : 43 * @unit_base;
 				opacity: @color_navigation_text;
-				padding: 6 * @unit_base 0 9 * @unit_base 0;
+				padding: 6 * @unit_base 14 * @unit_base 9 * @unit_base;
 				line-height: 43 * @unit_base;
 				margin-top: 6 * @unit_base;
 				-webkit-transition: color 300ms ease-in-out;
@@ -59,7 +60,7 @@
 			}
 
 			&:last-child {
-				margin-right: 32 * @unit_base;
+				margin-right: 18 * @unit_base;
 			}
 			&.ui-navigation-active {
 				.ui-text {
